    path to the file depending on whether an argument is given.  This
    provides backwards compatibility, but also allows you to access the
    newly added methods Screenshot#save, …#blank?, …#png and …#md5.
    (andreastt)

  * Removed timeout argument to Window#visual_hash.  We now default to
    50 milliseconds.  (andreastt)

  [NEW FEATURES]

  * New command-line option --tag (or -t for short) for specifying to
    run only tagged tests.  Adding ~ (tilde) before the tag (e.g. ~slow)
    will exclude given tests.

  * New command-line option --backtrace (or -b for short) for enabling
    full backtraces from RSpec.  As a result, --binary has lost its
    shortcut -b.  (andreastt)

  * Implemented a new screenshot API that exposes ScreenShotReply from
    OperaDriver.  (andreastt)

  [ENHANCEMENTS]

  * Upgraded to OperaDriver v0.4.2.pre5.  (andreastt)

  * Added specifications tests for Desktop part of OperaWatir.  (karie,
    mariap)

  * OperaWatir specification tests for Desktop are now using RSpec
    matchers.  Makes it easier to expect windows to be closed, opened,
    &c.  (karie)

  * --no-opera-idle has been renamed to --opera-idle.  OperaIdle is now
    by default switched off due to instability.  (andreastt)

  * Synced operawatir and desktopwatir binaries.  (andreastt)

  * Updated /spec/watir2/element_spec.rb to HEAD from watirspec.
    (andreastt)

  [BUG FIXES]

  * desktopwatir is no longer writing to STDERR, but to STDOUT.
    (andreastt)

  * Window#get_hash and Element#get_hash methods are now marked as
    deprecated.

  * Resolved failing to activate address field will use the current
    control without any errors.  Fixes DSK-320799.  (karie)

  * Widgets should return widgets listing from active Document Window.
    Fixes DSK-330102.  (karie)

  * Renamed paramter in DesktopBrowser#widgets since it's not
    necessarily the window name the user will be looking for.  (karie)
