@@ -10,7 +10,7 @@ describe 'Window' do
     end
 
      it 'returns a hash' do
-      @reference.visual_hash.should match /^(0x)[a-f0-9]{32}$/
+      @reference.should match /^(0x)[a-f0-9]{32}$/
     end
 
     it 'returns identical hashes for visually identical pages' do
